--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Multistage linkage</title>
 </head>
 <body>
+<button id="open">打开</button>
 <script src="dist/main.js"></script>
 </body>
 </html>
