[ADD] 增加关闭回调函数
增加关闭回调函数

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -18,6 +18,10 @@
     ], {
         confirmCallback: function (resultArr) {
             console.log('-----------' + JSON.stringify(resultArr))
+        },
+        closeCallback:function(){
+            this.hide();
+            console.log('close');
         }
     });
     document.getElementById('open').onclick = function () {
