[FIX] 解决自定义单项字体大小失效问题
解决自定义单项字体大小失效问题

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -16,6 +16,11 @@
         {data: ['01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12'], title: '时'},
         {data: ['01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12'], title: '分'}
     ], {
+        item: {
+            size: 20,
+            color: '#333333',
+            height: 35
+        },
         confirmCallback: function (resultArr) {
             console.log('-----------' + JSON.stringify(resultArr))
         },
