--- a/demo/demo.html
+++ b/demo/demo.html
@@ -16,6 +16,7 @@
         {data: ['01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12'], title: '时'},
         {data: ['01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12'], title: '分'}
     ], {
+        sizeDif:5,
         item: {
             size: 20,
             color: '#333333',
